--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -38,15 +38,15 @@
        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
         <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#div_ABOUT ME"> ABOUT ME<i class="bi bi-person"> </i>  </a>
+           <a class="nav-link active" aria-current="page" href="#div_ABOUT ME"> ABOUT ME <i class="bi bi-person"> </i>  </a>
          </li>
 
          <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">CONTACT <i class="bi bi-chat-text"> </i> </a>
+           <a class="nav-link active" aria-current="page" href="#div_CONTACT"> CONTACT <i class="bi bi-chat-text"> </i> </a>
           </li>
 
          <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">SKILLS <i class="bi bi-gear"> </i> </a>
+           <a class="nav-link active" aria-current="page" href="#div_SKILLS"> SKILLS <i class="bi bi-gear"> </i> </a>
          </li>
 
          <li class="nav-item">
@@ -88,13 +88,13 @@
 
 <div class="picture"> <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:500px;height:450px;"> </a> </div>
 <br><br>
- <div> <h2> <p class= "sectionhead"> ABOUT ME <i class="bi bi-person"> </i> </p> </h2> </div>
+ <di id="div_ABOUT ME"> <h2> <p class= "sectionhead"> ABOUT ME <i class="bi bi-person"> </i> </p> </h2> </div>
  <div class= "description">
 <p> I am a junior pursuing a Bachelor of Arts in Journalism and Government & Politics at the University of Maryland, College Park. 
   I am passionate about using my skills in writing, research, photography and social media to pursue a career in the media, legal and human rights advocacy fields.</p>
 </div>
 
-<div id="div_ABOUT ME"> <h2> <p class= "sectionhead"> CONTACT <i class="bi bi-chat-text"></i> </p> </h2> </div>
+<div id="div_CONTACT"> <h2> <p class= "sectionhead"> CONTACT <i class="bi bi-chat-text"></i> </p> </h2> </div>
 <div class= "description">
 <ul>
     <li> cheiderm@terpmail.umd.edu </li> 
@@ -102,7 +102,7 @@
     <li> <a href="https://github.com/VogueTortellini" target=_new>GitHub </a> </li>
   </ul> </div>
 
-  <div> <h2> <p class= "sectionhead"> SKILLS <i class="bi bi-gear"> </i> </p> </h2> </div>
+  <div id="div_SKILLS"> <h2> <p class= "sectionhead"> SKILLS <i class="bi bi-gear"> </i> </p> </h2> </div>
   <div class= "description">
 <ul>
   <li> Photography: I completed two courses at UMDs Philip Merrill College of
