--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -94,7 +94,7 @@
   I am passionate about using my skills in writing, research, photography and social media to pursue a career in the media, legal and human rights advocacy fields.</p>
 </div>
 
-<div id="div_CONTACT"> <h2> <p class= "sectionhead"> CONTACT <i class="bi bi-chat-text"></i> </p> </h2> </div>
+<div> <h2> <p class= "sectionhead"> CONTACT <i class="bi bi-chat-text"></i> </p> </h2> </div>
 <div class= "description">
 <ul>
     <li> cheiderm@terpmail.umd.edu </li> 
@@ -102,7 +102,7 @@
     <li> <a href="https://github.com/VogueTortellini" target=_new>GitHub </a> </li>
   </ul> </div>
 
-  <div id="div_SKILLS"> <h2> <p class= "sectionhead"> SKILLS <i class="bi bi-gear"> </i> </p> </h2> </div>
+  <div> <h2> <p class= "sectionhead"> SKILLS <i class="bi bi-gear"> </i> </p> </h2> </div>
   <div class= "description">
 <ul>
   <li> Photography: I completed two courses at UMDs Philip Merrill College of
