--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -50,15 +50,15 @@
          </li>
 
          <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">LANGUAGES <i class="bi bi-translate"> </i> </a>
+           <a class="nav-link active" aria-current="page" href="#div_LANGUAGES">LANGUAGES <i class="bi bi-translate"> </i> </a>
          </li>
 
          <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">EXPERIENCE <i class="bi bi-lightbulb"> </i> </a>
+           <a class="nav-link active" aria-current="page" href="#div_EXPERIENCE">EXPERIENCE <i class="bi bi-lightbulb"> </i> </a>
          </li>
 
          <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">EDUCATION <i class="bi bi-pencil"> </i> </a>
+           <a class="nav-link active" aria-current="page" href="#div_EDUCATION">EDUCATION <i class="bi bi-pencil"> </i> </a>
          </li>
 
 
@@ -94,7 +94,7 @@
   I am passionate about using my skills in writing, research, photography and social media to pursue a career in the media, legal and human rights advocacy fields.</p>
 </div>
 
-<div> <h2> <p class= "sectionhead"> CONTACT <i class="bi bi-chat-text"></i> </p> </h2> </div>
+<div id="div_CONTACT"> <h2> <p class= "sectionhead"> CONTACT <i class="bi bi-chat-text"></i> </p> </h2> </div>
 <div class= "description">
 <ul>
     <li> cheiderm@terpmail.umd.edu </li> 
@@ -102,7 +102,7 @@
     <li> <a href="https://github.com/VogueTortellini" target=_new>GitHub </a> </li>
   </ul> </div>
 
-  <div> <h2> <p class= "sectionhead"> SKILLS <i class="bi bi-gear"> </i> </p> </h2> </div>
+  <div id="div_SKILLS"> <h2> <p class= "sectionhead"> SKILLS <i class="bi bi-gear"> </i> </p> </h2> </div>
   <div class= "description">
 <ul>
   <li> Photography: I completed two courses at UMDs Philip Merrill College of
@@ -115,7 +115,7 @@ in English and Spanish, presentations and create promotional materials </li>
 reporting. </li>
 </ul> </div>
 
-<div> <h2> <p class= "sectionhead"> LANGUAGES <i class="bi bi-translate"> </i> </p> </h2> </div>
+<div id="div_LANGUAGES"> <h2> <p class= "sectionhead"> LANGUAGES <i class="bi bi-translate"> </i> </p> </h2> </div>
 <div class= "description">
 <ul>
     <li> English: Fluent</li>
@@ -128,7 +128,7 @@ reporting. </li>
     <div class="col second">
       <div class="p-3">
         
-<div> <h2> <p class= "sectionheader"> EXPERIENCE <i class="bi bi-lightbulb"> </i> </p> </h2> </div>
+<div id="div_EXPERIENCE"> <h2> <p class= "sectionheader"> EXPERIENCE <i class="bi bi-lightbulb"> </i> </p> </h2> </div>
 
 <div> <h3> <p class= "jobtitle"> PRN Front Desk Support </p> </h3> </div>
 
@@ -182,7 +182,7 @@ with students to foster community in the program. I also am a Campus Connector
 Squad Leader, where I mentor other Campus Connectors. </p>
 </div>
 
-<div> <h2> <p class= "sectionheader"> EDUCATION <i class="bi bi-pencil"> </i> </p> </h2> </div>
+<div id="div_EDUCATION"> <h2> <p class= "sectionheader"> EDUCATION <i class="bi bi-pencil"> </i> </p> </h2> </div>
 
 <div id= "degrees">
 <ul>
