--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -125,6 +125,7 @@ reporting. </li>
         
       </div>
     </div>
+    <div class="row gx-5"></div>
     <div class="col second">
       <div class="p-3">
         
