--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -83,8 +83,7 @@
 
 <div class="container px-4 text-start">
   <div class="row gx-5">
-    <div class="col first">
-      <div class="p-3">
+    <div class="col-md-6 first">
 
 <div class="picture"> <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:500px;height:450px;"> </a> </div>
 <br><br>
@@ -125,9 +124,7 @@ reporting. </li>
         
       </div>
     </div>
-    <div class="row gx-5"></div>
-    <div class="col second">
-      <div class="p-3">
+    <div class="col-md-6 second">
         
 <div id="div_EXPERIENCE"> <h2> <p class= "sectionheader"> EXPERIENCE <i class="bi bi-lightbulb"> </i> </p> </h2> </div>
 
