--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -84,7 +84,7 @@
 <div class="container px-4 text-start">
   <div class="row gx-5">
 
-    <div class="col first">
+    <div class="col-md-6 first">
 
 <div class="picture"> <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:500px;height:450px;"> </a> </div>
 <br><br>
@@ -121,10 +121,9 @@ reporting. </li>
     <li> English: Fluent</li>
     <li> French: Elementary</li>
 </ul> </div>
-
-        
     </div>
-    <div class="col second">
+
+    <div class="col-md-6 second">
         
 <div id="div_EXPERIENCE"> <h2> <p class= "sectionheader"> EXPERIENCE <i class="bi bi-lightbulb"> </i> </p> </h2> </div>
 
