--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -38,7 +38,7 @@
        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
         <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#div_ABOUT ME"> ABOUT ME <i class="bi bi-person"> </i>  </a>
+           <a class="nav-link active" aria-current="page" href="#div_ABOUT_ME"> ABOUT ME <i class="bi bi-person"> </i>  </a>
          </li>
 
          <li class="nav-item">
@@ -88,7 +88,7 @@
 
 <div class="picture"> <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:500px;height:450px;"> </a> </div>
 <br><br>
- <div id="div_ABOUT ME"> <h2> <p class= "sectionhead"> ABOUT ME <i class="bi bi-person"> </i> </p> </h2> </div>
+ <div id="div_ABOUT_ME"> <h2> <p class= "sectionhead"> ABOUT ME <i class="bi bi-person"> </i> </p> </h2> </div>
  <div class= "description">
 <p> I am a junior pursuing a Bachelor of Arts in Journalism and Government & Politics at the University of Maryland, College Park. 
   I am passionate about using my skills in writing, research, photography and social media to pursue a career in the media, legal and human rights advocacy fields.</p>
