--- a/Resume/cait-heiderman-resume-project.html
+++ b/Resume/cait-heiderman-resume-project.html
@@ -1,5 +1,7 @@
 <!doctype html>
 
+<!-- I made this project myself-->
+
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="resume.css"> <!-- Link to stylesheet-->
@@ -80,12 +82,14 @@
 <!-- Hero end-->
 
 
+<!-- Container start-->
 
 <div class="container px-4 text-start">
   <div class="row gx-5">
 
     <div class="col-md-6 first">
 
+<!-- Image-->
 <div class="picture"> <a> <img src="Cait Heiderman.jpeg" alt="Photo of Cait Heiderman" style="width:500px;height:450px;"> </a> </div>
 <br><br>
  <div id="div_ABOUT_ME"> <h2> <p class= "sectionhead"> ABOUT ME <i class="bi bi-person"> </i> </p> </h2> </div>
@@ -190,6 +194,7 @@ Expected May 2027 </li>
   </div>
 </div>
 
+<!-- Container end-->
 
 </body>
 </html>
