--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -44,15 +44,15 @@
        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
          <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">lorem ipsum</a>
+           <a class="nav-link active" aria-current="page" href="#">Lorem ipsum</a>
          </li>
 
           <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">lorem ipsum</a>
+           <a class="nav-link active" aria-current="page" href="#">Lorem ipsum</a>
          </li>
 
           <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">lorem ipsum</a>
+           <a class="nav-link active" aria-current="page" href="#">Lorem ipsum</a>
           </li>
        </ul>
        
