--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -116,6 +116,10 @@
       <h3> Lorem ipsum</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
       </div>
+
+      <div class="card-footer text-body-secondary">
+    2 days ago
+  </div>
 </div> </div> </div>
 <!-- Icons end-->
 
