--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -70,6 +70,11 @@
 </nav>
  <!-- Navbar end-->
 
+ <center>
+      <a> <img src="image2.jpg" alt="Black Caddy Working The Masters" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Ben Hogan at the 1954 Masters with his caddie. (Source: Garden & Gun).</p> </div>
+</center>
+
 
 
 <br>
