--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -71,14 +71,15 @@
  <!-- Navbar end-->
 
  <center>
-      <a> <img src="image2.jpg" alt="Black Caddy Working The Masters" style="width:800px;height:600px;"> </a> 
-      <div> <p class="caption"> Ben Hogan at the 1954 Masters with his caddie. (Source: Garden & Gun).</p> </div>
+      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
 </center>
 
 
 
 <br>
-<!-- Icons start-->
+
+<!-- Three column section start-->
 <div class="container">
   <div class="row">
     <div class="col-md-4 text-center"> 
@@ -95,12 +96,9 @@
       <h3> Lorem ipsum</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
       </div>
-
-      <div class="card-footer text-body-secondary">
-    2 days ago
   </div>
 </div> </div> </div>
-<!-- Icons end-->
+
 
 
 
