--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -70,6 +70,15 @@
 </nav>
  <!-- Navbar end-->
 
+ <div class="container mt-4">  <!-- Main container start-->
+
+<div class="headline"> <h1> This is a headline</h1></div>
+<div class="byline"> <p> By: Jane Doe</p></div>
+<div class="chaptertitle"> <h2> Chapter Headline</h2></div>
+<div class="chapter"> <p> This is a headline</p></div>
+
+</div> <!-- Main container end-->
+
  <center>
       <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
       <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
