--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -75,7 +75,8 @@
 <div class="headline"> <h1> This is a headline</h1></div>
 <div class="byline"> <p> By: Jane Doe</p></div>
 <div class="chaptertitle"> <h2> Chapter Headline</h2></div>
-<div class="chapter"> <p> This is a headline</p></div>
+<div class="chapter"> <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
+
 
 </div> <!-- Main container end-->
 
