--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -85,32 +85,25 @@
       <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
 </center>
 
+<div class="chapter"> <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
 
-
-<br>
 
 <!-- Three column section start-->
 <div class="container">
   <div class="row">
     <div class="col-md-4 text-center"> 
       <h3> Lorem ipsum</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
       </div>
 
     <div class="col-md-4 text-center"> 
       <h3> Lorem ipsum</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
       </div>
 
     <div class="col-md-4 text-center"> 
       <h3> Lorem ipsum</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
       </div>
   </div>
 </div> </div> </div>
-
-
-
 
 </body>
 </html>
