--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -70,14 +70,12 @@
 </nav>
  <!-- Navbar end-->
 
- <div class="container mt-4">  <!-- Main container start-->
+ <div class="container">  <!-- Main container start-->
 
 <div class="headline"> <h1> This is a headline</h1></div>
 <div class="byline"> <p> By: Jane Doe</p></div>
 <div class="chaptertitle"> <h2> Chapter Headline</h2></div>
 <div class="chapter"> <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
-
-
 </div> <!-- Main container end-->
 
  <center>
