--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -58,9 +58,6 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -71,9 +68,9 @@
 
  <div class="container">  <!-- Main container start-->
 
-<div class="headline"> <h1> This is a headline</h1></div>
+<div class="headline"> <h1> HEADLINE</h1></div>
 <div class="byline"> <p> By: Jane Doe</p></div>
-<div class="chaptertitle"> <h2> Chapter Headline</h2></div>
+<div class="chaptertitle"> <h2> CHAPTER HEADLINE</h2></div>
 <div class="chapter"> <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
 </div> <!-- Main container end-->
 
