--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -1,14 +1,3 @@
-<html lang="en">
-
-    <head>
-    </head>
-
-    <body>
-    </body>
-
-</html>
-
-
 <!doctype html>
 <html lang="en">
 
@@ -17,7 +6,7 @@
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
- <title>HTML frame</title>
+ <title>The Los Angeles Star</title>
  <meta name="description" content="Merrill College of Journalism, UMD">
  <meta name="author" content="Cait Heiderman">  <!-- Changed to my name -->
 
@@ -68,7 +57,8 @@
 
  <div class="container">  <!-- Main container start-->
 
-<div class="headline"> <h1> HEADLINE</h1></div>
+<div class="headline"> <h1> Can Anyone Rescue the Trafficked Girls of L.A.’s Figueroa Street?</h1></div>
+<div class ="subhead"> <h3> An investigation into the city’s failed attempts to curb prostitution and human trafficking along one of its most notorious corridors. </h3></div>
 <div class="byline"> <p> By: Jane Doe</p></div>
 <div class="chaptertitle"> <h2> CHAPTER HEADLINE</h2></div>
 <div class="chapter"> <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
