--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -84,7 +84,7 @@
   </div>
 </div> </div> </div>
 
-<footer class="text-center mt-4 py-4 bg-light">
+<footer class="text-center mt-4 py-4 bg-dark text-white">
   <p>&copy; THIS IS A FOOTER</p>
 </footer>
 
