--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -51,22 +51,28 @@
  <!-- Navbar end-->
 
  <div class="container">  <!-- Main container start-->
-  
+
 <a> <img src="TheLAStarDraft.png" alt="The LA Star" style="width:1200px;height:200px;"> </a> 
 <div class="headline"> <h1> Can Anyone Rescue the Trafficked Girls of L.A.’s Figueroa Street?</h1></div>
 <div class ="subhead"> <h3> An investigation into the city’s failed attempts to curb prostitution and human trafficking along one of its most notorious corridors. </h3></div>
 <div class="byline"> <p> By: Jane Doe</p></div>
+
+ <center>
+      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+</center>
+
 <div class="chaptertitle"> <h2> CHAPTER HEADLINE</h2></div>
 <div class="chapter"> <p> 
-Ana paced on the sidewalk at 68th and Figueroa, her front teeth missing and an ostomy bag taped down under her hot pink lingerie.
+Ana paced on the sidewalk at 68th and Figueroa, her front teeth missing and an ostomy bag taped down under her hot pink lingerie. 
 
-She surveyed the intersection in South Central Los Angeles, where preteens were hobbling in stilettos and G-strings. It was a Tuesday night this January, and Ana knew that most of the girls longed for a coat or gloves — anything to keep them warm — but covering up was not an option. Their eyes were cast down, but their hands waved mechanically at every car, angling for another customer to help meet their traffickers’ quotas.
+<br> She surveyed the intersection in South Central Los Angeles, where preteens were hobbling in stilettos and G-strings. It was a Tuesday night this January, and Ana knew that most of the girls longed for a coat or gloves — anything to keep them warm — but covering up was not an option. Their eyes were cast down, but their hands waved mechanically at every car, angling for another customer to help meet their traffickers’ quotas.
 
-Ana was working, too, but the years had worn down any visceral anxiety into something more like resignation. Ana was 19, but the girls on the street reminded her of herself and her sister when they were first put out on Figueroa for sex. She had been 13. Her sister, 11.
+<br> Ana was working, too, but the years had worn down any visceral anxiety into something more like resignation. Ana was 19, but the girls on the street reminded her of herself and her sister when they were first put out on Figueroa for sex. She had been 13. Her sister, 11.
 
-Their story had been unoriginal, at least for this street: foster kids turned runaways turned recruits, drawn in by a new friend on Instagram who offered to help them get by. The friend dropped Ana and her sister off at a motel on Figueroa and handed them lacy bikinis. Ana asked what they were for. They needed to turn in $800 each by morning, the friend said. They stood on a corner, shivering. It would take at least half a dozen customers each.
+<br> Their story had been unoriginal, at least for this street: foster kids turned runaways turned recruits, drawn in by a new friend on Instagram who offered to help them get by. The friend dropped Ana and her sister off at a motel on Figueroa and handed them lacy bikinis. Ana asked what they were for. They needed to turn in $800 each by morning, the friend said. They stood on a corner, shivering. It would take at least half a dozen customers each.
 
-By now, Ana had grown accustomed to the protocols of the Blade, a roughly 50-block stretch of Figueroa Street that had become one of the most notorious sex-trafficking corridors in the United States. (Ana’s full name, as well as those of other trafficking victims in this article, are being withheld for their safety.) She knew to approach cars from the passenger side and get the money as soon as she climbed in. She knew which motels had rooms set aside for just this purpose; which schools and businesses didn’t padlock their parking lots at night. And she knew she needed to be dropped back off on the Blade every 30 minutes if she was going to reach her new quota of $1,200. The sameness in the days and weeks and months on Figueroa was such that Ana remembered little of them.
+<br> By now, Ana had grown accustomed to the protocols of the Blade, a roughly 50-block stretch of Figueroa Street that had become one of the most notorious sex-trafficking corridors in the United States. (Ana’s full name, as well as those of other trafficking victims in this article, are being withheld for their safety.) She knew to approach cars from the passenger side and get the money as soon as she climbed in. She knew which motels had rooms set aside for just this purpose; which schools and businesses didn’t padlock their parking lots at night. And she knew she needed to be dropped back off on the Blade every 30 minutes if she was going to reach her new quota of $1,200. The sameness in the days and weeks and months on Figueroa was such that Ana remembered little of them.
 </p></div>
 
 <h1> Map of Prostitution Related Arrests Along Figueroa Street From 2020 to Present</h1>
@@ -75,10 +81,7 @@ By now, Ana had grown accustomed to the protocols of the Blade, a roughly 50-blo
 
 </div> <!-- Main container end-->
 
- <center>
-      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
-      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
-</center>
+
 
 <div class="chapter"> <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
 
