--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -66,9 +66,9 @@
 <div class="chapter"> <p> 
 Ana paced on the sidewalk at 68th and Figueroa, her front teeth missing and an ostomy bag taped down under her hot pink lingerie. 
 
-<br> She surveyed the intersection in South Central Los Angeles, where preteens were hobbling in stilettos and G-strings. It was a Tuesday night this January, and Ana knew that most of the girls longed for a coat or gloves — anything to keep them warm — but covering up was not an option. Their eyes were cast down, but their hands waved mechanically at every car, angling for another customer to help meet their traffickers’ quotas.
+She surveyed the intersection in South Central Los Angeles, where preteens were hobbling in stilettos and G-strings. It was a Tuesday night this January, and Ana knew that most of the girls longed for a coat or gloves — anything to keep them warm — but covering up was not an option. Their eyes were cast down, but their hands waved mechanically at every car, angling for another customer to help meet their traffickers’ quotas.
 
-<br> Ana was working, too, but the years had worn down any visceral anxiety into something more like resignation. Ana was 19, but the girls on the street reminded her of herself and her sister when they were first put out on Figueroa for sex. She had been 13. Her sister, 11.
+Ana was working, too, but the years had worn down any visceral anxiety into something more like resignation. Ana was 19, but the girls on the street reminded her of herself and her sister when they were first put out on Figueroa for sex. She had been 13. Her sister, 11.
 
 <br> Their story had been unoriginal, at least for this street: foster kids turned runaways turned recruits, drawn in by a new friend on Instagram who offered to help them get by. The friend dropped Ana and her sister off at a motel on Figueroa and handed them lacy bikinis. Ana asked what they were for. They needed to turn in $800 each by morning, the friend said. They stood on a corner, shivering. It would take at least half a dozen customers each.
 
