--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -63,20 +63,34 @@
 </center>
 
 <div class="chaptertitle"> <h2> CHAPTER HEADLINE</h2></div>
+
 <div class="chapter"> 
   <p> Ana paced on the sidewalk at 68th and Figueroa, her front teeth missing and an ostomy bag taped down under her hot pink lingerie. </p>
   <p>She surveyed the intersection in South Central Los Angeles, where preteens were hobbling in stilettos and G-strings. It was a Tuesday night this January, and Ana knew that most of the girls longed for a coat or gloves — anything to keep them warm — but covering up was not an option. Their eyes were cast down, but their hands waved mechanically at every car, angling for another customer to help meet their traffickers’ quotas. </p>
   <p>Ana was working, too, but the years had worn down any visceral anxiety into something more like resignation. Ana was 19, but the girls on the street reminded her of herself and her sister when they were first put out on Figueroa for sex. She had been 13. Her sister, 11. </p>
   <p> Their story had been unoriginal, at least for this street: foster kids turned runaways turned recruits, drawn in by a new friend on Instagram who offered to help them get by. The friend dropped Ana and her sister off at a motel on Figueroa and handed them lacy bikinis. Ana asked what they were for. They needed to turn in $800 each by morning, the friend said. They stood on a corner, shivering. It would take at least half a dozen customers each. </p>
   <p> By now, Ana had grown accustomed to the protocols of the Blade, a roughly 50-block stretch of Figueroa Street that had become one of the most notorious sex-trafficking corridors in the United States. (Ana’s full name, as well as those of other trafficking victims in this article, are being withheld for their safety.) She knew to approach cars from the passenger side and get the money as soon as she climbed in. She knew which motels had rooms set aside for just this purpose; which schools and businesses didn’t padlock their parking lots at night. And she knew she needed to be dropped back off on the Blade every 30 minutes if she was going to reach her new quota of $1,200. The sameness in the days and weeks and months on Figueroa was such that Ana remembered little of them. </p>
-
-
-
 </div>
 
 <h1> Map of Prostitution Related Arrests Along Figueroa Street From 2020 to Present</h1>
 <iframe title="Prostitution Related Arrests Along Figueroa Street From 2020 to Present" aria-label="Symbol map" id="datawrapper-chart-BwndE" src="https://datawrapper.dwcdn.net/BwndE/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="732" data-external="1"></iframe><script type="text/javascript">window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}});</script>
 
+<div class="chapter"> 
+  <p>The Blade was an eight-minute drive from the University of Southern California, and yet another universe. Parents pushed strollers past the trafficked girls as they took their own children to school. Amid boarded-up storefronts were a few that catered specifically to the trade: a smoke shop with the banner “free Magnum condom with any purchase” and a lingerie store named — in cursive — Sluts. Figueroa seemed to be the one street in all of Los Angeles where nobody ever honked: Customers waited politely, as if in line at a drive-through, to peruse the menu and take their pick.</p>
+  <p>Over the years, the Blade had become much busier than when Ana started: more girls, more customers, more traffickers idling in their Hellcats and Porsches on the side streets, watching to make sure their girls didn’t hide any money and didn’t snitch. Ana had seen the Blade expand from three main intersections of Figueroa to more than three miles. She had met girls brought in from the East Coast and the Deep South, and there sometimes seemed to be four times as many minors as before — easy to spot by their over-the-top makeup and unsteady gait. The police helicopters Ana used to notice hovering overhead with search lights seemed to become infrequent. Eventually, she said, they disappeared completely.</p>
+  <p>In the shadows, Figueroa had become more violent. The younger the girl, the more customers would pay, which meant preteens were often being robbed and assaulted by groups of older girls trying to make quota. The traffickers who governed the street were worse. Tonight Ana was waving at cars in front of a tire shop when a trafficker pulled up on the wrong side of the street, climbed out and beat one of the girls near Ana over the head with a pistol. The girl had probably looked at him wrong, Ana decided. She knew better than to intervene.</p>
+  <p>When he left, Ana plodded over to her own trafficker to ask for a break. The answer was no. Ana took some Percocets and chased them with Hennessy to numb herself. The temperature dropped, and soon she felt herself longing for another customer’s car, just to get out of the cold.</p>
+</div>
+
+charset
+
+<div class="chapter"> 
+   <p>Ten blocks south of Ana, Officer Elizabeth Armendariz was sitting in the passenger seat of an undercover Ford Five Hundred, holding a police radio to her mouth. She pushed her hair off her shoulder and assigned positions to each of the vice-unit vehicles participating in the night’s operation.</p>
+   <p>Armendariz, 27, had a broad range of missions she directed on Figueroa for the 77th Street Division of the Los Angeles Police Department. There were sting operations to arrest traffickers she had corresponded with online, and motel raids that busted scores of customers in the act. But tonight was what she called a “juvie rescue op”: a sweep down the Blade to find as many juveniles as possible — to help them escape, but also to gather new intel on their traffickers.</p>
+<p>Armendariz’s eyes darted among the half-dozen girls in the intersection. She chose a blonde with a white hair bow, who looked especially young.</p>
+<p>“Seven-eight and Fig, west side, smack in the middle,” Armendariz said into the radio. “Hit her up for me.”</p>
+
+  </div>
 
 </div> <!-- Main container end-->
 
