--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -82,7 +82,8 @@
   <p>When he left, Ana plodded over to her own trafficker to ask for a break. The answer was no. Ana took some Percocets and chased them with Hennessy to numb herself. The temperature dropped, and soon she felt herself longing for another customer’s car, just to get out of the cold.</p>
 </div>
 
-charset
+<a> <img src="CarDraft.png" alt="Line of cars drawing" style="width:1200px;height:200px;"> </a> 
+
 
 <div class="chapter"> 
    <p>Ten blocks south of Ana, Officer Elizabeth Armendariz was sitting in the passenger seat of an undercover Ford Five Hundred, holding a police radio to her mouth. She pushed her hair off her shoulder and assigned positions to each of the vice-unit vehicles participating in the night’s operation.</p>
