--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -90,11 +90,29 @@
    <p>Armendariz, 27, had a broad range of missions she directed on Figueroa for the 77th Street Division of the Los Angeles Police Department. There were sting operations to arrest traffickers she had corresponded with online, and motel raids that busted scores of customers in the act. But tonight was what she called a “juvie rescue op”: a sweep down the Blade to find as many juveniles as possible — to help them escape, but also to gather new intel on their traffickers.</p>
    <p>Armendariz’s eyes darted among the half-dozen girls in the intersection. She chose a blonde with a white hair bow, who looked especially young.</p>
    <p>“Seven-eight and Fig, west side, smack in the middle,” Armendariz said into the radio. “Hit her up for me.”</p>
-  </div>
+</div>
 
 
+<div class="chapter"> 
+   <p>A male undercover officer in a Dodge Caravan would approach the girl from the south, she told them, and secure the verbal evidence; a black-and-white patrol car would hide around the corner, waiting to come in for a pickup.</p>
+   <p>The Dodge pulled up. “How much?” the undercover officer asked the girl.</p>
+   <p>“Um, $100 for everything,” she said, leaning in the car window.</p>
+   <p>Then he asked: “You guys do threesomes?”</p>
+   <p>Armendariz signaled for the patrol car. She watched closely. Many girls feared the police because their traffickers would punish them if it looked as if they were cooperating. Once in a while, the girls fled. This time, Armendariz saw it first.</p>
+   <p>“Female running northbound,” she said into the radio suddenly, glancing over at her sergeant, Alvaro Navarro, in the driver’s seat and giving him a nod. He threw the car into reverse, then jerked forward, cutting across the intersection to trail the girl with the white bow, who had broken into a sprint, her sandals flung off half a block back.</p>
+   <p>“I’ve got her hooking that left, going westbound on Seven-seven,” Armendariz said, swearing under her breath as the girl disappeared around a corner. But two patrol cars converged from different coordinates, throwing their doors open and locking her in.</p>
 
+  <p>For the 77th Street Division, which covers the northern half of the Figueroa Corridor, prostitution had always been a problem. But in recent years, the officers had seen the magnitude of child sex trafficking explode. Part of that boom happened during the pandemic, when many girls were out of school and immersed in social media, where traffickers lurked. Teachers who would ordinarily follow up on absences or report signs of neglect could not.</p>
+<p>Gangs that had long sold drugs began to take advantage of Figueroa’s lucrative opportunity. With a dozen girls, one trafficker could easily make $12,000 a night. “Drugs are sold once and gone forever, but girls can be resold indefinitely,” said Navarro, who had been in the division for two decades. Motel owners who noticed the parades of customers but feared the gangs’ retribution kept quiet.</p>
+<p>As trafficking grew, the means to deal with it shrank. In 2021, the Police Department’s central human-trafficking unit was disbanded following budget cuts, leaving each division fewer resources to tackle the problem. According to Navarro, the 77th Street Division was supposed to have six investigators at Armendariz’s rank in its vice unit. Instead, she was the only one.</p>
+<p>Their jobs grew even more challenging when California repealed the law allowing the police to arrest women who loitered with the intent to engage in prostitution. The repeal, known as SB 357, was intended to prevent profiling of Black, brown and trans women based on how they dressed. But when it was implemented in January 2023, the effect was that uniformed officers could no longer apprehend groups of girls in lingerie on Figueroa, hoping to recover minors among them. Now officers needed to be willing to swear they had reason to suspect each girl was underage — but with fake eyelashes and wigs, it was nearly impossible to tell. One girl told vice officers that her trafficker had explained things succinctly: “We run Figueroa now,” he said.</p>
+<p>Soon every intersection from Gage to Imperial had girls waving and waiting to be rented out, some of them imported by traffickers from Oregon or Texas or Alabama. By the end of 2023, the city attorney had taken to calling Figueroa the Kiddie Stroll because so many of the girls weren’t even 13.</p>
+  <p>The girl in the white hair bow didn’t look much older than that.</p>
+<p>“You’re not in trouble, sweetheart — we want to help you,” an officer shouted to her as he jumped out of his patrol car. She tried to hide. Armendariz cracked open her tinted window just enough to see the officer grab the girl’s wrists, cuff them and turn her toward a fence. Then Navarro veered slowly back into the flow of traffic, undetected. Armendariz shook her head. Up close, the girl had road burn across her stomach and a busted blood vessel in her eye.</p>
+<p>“Female detained,” she said into the radio. “Thank you, guys.”</p>
+</div>
 
+<a> <img src="CarDraft.png" alt="Line of cars drawing" style="width:1300px;height:200px;"> </a> 
 
 <div class="chapter"> <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
 
